--- a/09-Py-for-Cloud-DevOps-SRE/os-sys-io-shutil-subprocess.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/os-sys-io-shutil-subprocess.ipynb
@@ -113,6 +113,82 @@
    "source": [
     "dir(io)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1a61583-6fb7-4b43-ac7e-42149dd49658",
+   "metadata": {},
+   "source": [
+    "# shutil Library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a8d8607-c5cf-4445-b573-6ba10ff7aa41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b83dee2-4dff-4aa2-aad5-bfa8481525f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(io)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14123079-37d9-4a8a-8985-ff18ef25576a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(io)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31ac57dc-7669-4933-be0d-ea4ee59e5103",
+   "metadata": {},
+   "source": [
+    "# subprocess Library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c6ff564-ef48-43b7-9d2d-17fe726ef6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e422ff-6bfc-41db-ae93-1905ba0e599f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(io)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "477ca72f-6f70-4992-acf8-fd7a954c1541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(io)"
+   ]
   }
  ],
  "metadata": {
