Add and modify files

--- a/11-Security/Environment Variables.ipynb
+++ b/11-Security/Environment Variables.ipynb
@@ -9,9 +9,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f382d986-66f1-449f-b45f-1b117170c2d9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Python Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a56a7cc9-d3d5-446c-8fa5-a9cb5aeb04d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing env.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile env.py\n",
+    "VAR_KEY=\"VAR_VALUE\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "71080c28-53b0-4f92-ba01-62f88267a7e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VAR_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "import env\n",
+    "\n",
+    "print(env.VAR_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "13970704-0463-4a1b-8586-53f940f74834",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VAR_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "from env import *\n",
+    "\n",
+    "print(VAR_KEY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bb8fd5e-db7d-4afb-ba04-d101f9f7246b",
+   "metadata": {},
+   "source": [
+    "## OS Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "de273723-c7e1-46a3-833d-e107b7f8cb3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export VAR_KEY=\"VAR_VALUE\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d6091a18-553e-4ea1-add9-0ed88b4c1ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# print(os.getenv('VAR_KEY'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca5c8704-583e-462a-8d8c-e82ac3f6e0aa",
+   "id": "136d6b9f-774e-4738-ae33-071796cf6486",
    "metadata": {},
    "outputs": [],
    "source": []
