--- a/13-App-site-blog/site-/site dev.ipynb
+++ b/13-App-site-blog/site-/site dev.ipynb
@@ -9,6 +9,615 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c079758c-1724-441f-bbf7-d01c0522f246",
+   "metadata": {},
+   "source": [
+    "# Site App with Database \n",
+    "\n",
+    "* About Me Section\n",
+    "* Notepad: Create, Read\n",
+    "* Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae9a2e06-0693-4170-b74b-98636adfb294",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Create a database server using Docker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d4bb2cb-bb1e-44d7-9cd3-723e5945ada4",
+   "metadata": {},
+   "source": [
+    "### Postgres Docker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ba62984-c0a2-49af-a29f-127cefc90f6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Without volume/data connected\n",
+    "# !docker run --name postgres-sql -e POSTGRES_USER=matt -e POSTGRES_PASSWORD=password  -d postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce07382b-6eb6-4de6-b34c-67e3d3d6f0ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With volume/data connected\n",
+    "!docker run -d \\\n",
+    "    --name postgres-sql \\\n",
+    "    -e POSTGRES_USER=matt \\\n",
+    "    -e POSTGRES_PASSWORD=password \\\n",
+    "    -v $(pwd)/data/:/var/lib/postgresql/data/ \\\n",
+    "    -p 5000:5432 \\\n",
+    "    postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e804e316-d06d-4468-bebc-82df92563b74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e21f2874-b6c0-41e0-8751-fbf3f2dd113d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f3d400-4dd8-4342-9582-e8cb725ab2d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the data\n",
+    "# In a terminal\n",
+    "# sudo su\n",
+    "# cd $(pwd)/data/\n",
+    "# ls -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf2936ee-6924-4cf9-8760-c1ebe6e0d67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test the data of the DB\n",
+    "# docker rm -f <CONTAINER_ID>\n",
+    "# run the docker run <...>\n",
+    "# check the pgAdmin\n",
+    "# the data persists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9222c14c-f28e-4e18-b818-4d819eee652a",
+   "metadata": {},
+   "source": [
+    "### pgAdmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04620fde-561c-478b-a0b4-1549368d89a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -p 8000:80 \\\n",
+    "    -e 'PGADMIN_DEFAULT_EMAIL=matt@example.com' \\\n",
+    "    -e 'PGADMIN_DEFAULT_PASSWORD=password' \\\n",
+    "    -d dpage/pgadmin4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f10896ff-79b5-450f-81db-db77a548b515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca6c7d0-96d9-42e6-9fef-ba1e37d7e514",
+   "metadata": {},
+   "source": [
+    "### Create a firewall (GCP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2641bcb1-fb7c-4f45-a664-f1d95bea3923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud compute --project=$(gcloud config get project) firewall-rules create ports \\\n",
+    "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:5000,tcp:8000,tcp:8501,tcp:9000 --source-ranges=0.0.0.0/0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7af4f57e-88ce-40d6-8269-c1ad7fc2e491",
+   "metadata": {},
+   "source": [
+    "### Open pgAdmin Browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ebb9d55-3f38-470a-ae2f-45d58aed7066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# http://<IP_ADDRESS>:<PORT>\n",
+    "# Login with credentials\n",
+    "\n",
+    "# Register Server\n",
+    "# HOST: <IP_ADDRESS>\n",
+    "# PORT: 5000\n",
+    "# USER: <POSTGRES_USER>\n",
+    "# PASSWORD: <PASSWORD>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1f4c638-8072-43d1-89a9-1617ef15ff4b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Install and import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa57c80b-04db-4c37-8835-76e4bcc3635e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install streamlit psycopg2-binary -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6afae1e-c0b4-4956-ac15-cd3f77df6a08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamlit as st\n",
+    "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8608140d-ad86-40a6-8541-805327ca4ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Restart the terminal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8311a023-2cf6-4f61-ac7f-2b0dbb0c1e03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad4e247c-cb86-479a-807f-78fa14b7378e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9585a48-7f0f-4154-806c-0ccbf3cd9f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile env.py\n",
+    "# DB Credentials\n",
+    "DBNAME=\"matt\"\n",
+    "USER='matt'\n",
+    "HOST='35.193.80.15'\n",
+    "PORT='5000'\n",
+    "PASSWORD='password'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f928a6ab-daa5-4680-adff-87640aa88531",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile app.py\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "from env import *\n",
+    "\n",
+    "#----------Page Configuration----------# \n",
+    "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
+    "                   page_icon=\":cloud:\",\n",
+    "                   menu_items={\n",
+    "                       'About':\"# Matt Cloud Tech\"})\n",
+    "#----------About Me Section----------#\n",
+    "st.title(\":cloud: Matt Cloud Tech\")\n",
+    "st.subheader(\"\", divider=\"rainbow\")\n",
+    "\n",
+    "st.write(\"\"\"\n",
+    "        ### Good day :wave:.\n",
+    "        ### My name is :blue[Matt]. I am a Cloud Technology Enthusiast.\n",
+    "        ### Currently, I am learning and building Cloud Infrastructure, Data and CI/CD Pipelines, and Intelligent Systems. \n",
+    "        \"\"\")\n",
+    "\n",
+    "st.divider()\n",
+    "st.write(\":link: :computer: [Personal Website](https://)\")\n",
+    "st.write(\":link: :book: [Project Repository](https://)\")\n",
+    "st.write(\":link: :notebook: [Blog](https://)\")\n",
+    "st.write(\":link: :hand: [Connect with me](https://)\")\n",
+    "\n",
+    "#----------Notepad----------#\n",
+    "# Notepad Section\n",
+    "# Header\n",
+    "st.header(\"Notepad :notebook:\",divider=\"rainbow\")\n",
+    "st.caption(\"\"\"\n",
+    "            Add your thoughts here! It will be stored in a database! \\n\n",
+    "            :warning: :red[Do not add sensitive data.]\n",
+    "            \"\"\")\n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS notes(id serial PRIMARY KEY, name varchar, header varchar, note varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Inputs\n",
+    "name = st.text_input(\"Your Name\")\n",
+    "header = st.text_input(\"Header\")\n",
+    "note = st.text_area(\"Note\")\n",
+    "if st.button(\"Add a note\"):\n",
+    "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ##### :pencil: {header} \\n\n",
+    "            #### {note} \\n\n",
+    "            :man: {name} \\n\n",
+    "            :watch: {time}\"\"\")\n",
+    "    st.success(\"Successfully Added.\")\n",
+    "    # st.balloons()\n",
+    "    ### Insert into adatabase\n",
+    "    SQL = \"INSERT INTO notes (name, header, note, time) VALUES(%s, %s, %s, %s);\"\n",
+    "    data = (name, header, note, time)\n",
+    "    cur.execute(SQL, data)\n",
+    "    con.commit()\n",
+    "    \n",
+    "# Previous Notes \n",
+    "st.divider()\n",
+    "st.write(\"### *Previous Notes*\")\n",
+    "# Write the data\n",
+    "cur.execute(\"\"\"\n",
+    "            SELECT * \n",
+    "            FROM notes\n",
+    "            ORDER BY time DESC\n",
+    "            \"\"\")\n",
+    "for id, name, header, note, time in cur.fetchall():\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ##### :pencil: {header} \\n\n",
+    "            #### {note} \\n\n",
+    "            :man: {name} \\n\n",
+    "            :watch: {time}\"\"\")\n",
+    "#    if st.button(f\"UPDATE ID #: {id}\"):\n",
+    "#        name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
+    "#        header = st.text_input(f\"Header (ID #: {id})\", header)\n",
+    "#        note = st.text_area(f\"Note (ID #: {id})\", note)\n",
+    "#        if st.button(f\"CONFIRM UPDATE ID #: {id}\"):\n",
+    "#            cur.execute(f\"UPDATE notes SET id={id}, name='{name}', header='{header}', note='{note}' WHERE id = {id}\")\n",
+    "#            con.commit()\n",
+    "#            st.success(\"Successfully Edited.\")\n",
+    "    if st.button(f\"DELETE ID #: {id}\"):\n",
+    "        cur.execute(f\"DELETE FROM notes WHERE id = {id}\")\n",
+    "        con.commit()\n",
+    "        st.success(\"Successfully Deleted.\")\n",
+    "    st.subheader(\"\",divider=\"gray\")\n",
+    "    \n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "\n",
+    "#----------Counter----------#\n",
+    "# Title\n",
+    "st.header(\"Counter App\")\n",
+    "st.caption(\"\"\"\n",
+    "            Count every request in this app.\n",
+    "            \"\"\")\n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS counter(id serial PRIMARY KEY, view int, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Counter\n",
+    "import time\n",
+    "time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "view = 1\n",
+    "### Insert into a database\n",
+    "SQL = \"INSERT INTO counter (view, time) VALUES(%s, %s);\"\n",
+    "data = (view, time)\n",
+    "cur.execute(SQL, data)\n",
+    "con.commit()\n",
+    "\n",
+    "# Total views\n",
+    "cur.execute(\"\"\"\n",
+    "                SELECT SUM(view) \n",
+    "                FROM counter\n",
+    "                \"\"\")\n",
+    "st.write(f\"### Total views: **{cur.fetchone()[0]}**\")\n",
+    "\n",
+    "# Current view\n",
+    "st.write(f\"Current: {time}\")\n",
+    "# Previous hits\n",
+    "st.divider()\n",
+    "st.write(\"### *Previous Views*\")\n",
+    "# Write the data\n",
+    "cur.execute(\"\"\"\n",
+    "            SELECT * \n",
+    "            FROM counter\n",
+    "            ORDER BY time DESC\n",
+    "            \"\"\")\n",
+    "for _, _, time in cur.fetchall():\n",
+    "    st.text(f\"{time}\")\n",
+    "    \n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b170876-29c0-4721-ab3f-808f4fbc2652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile Dockerfile\n",
+    "FROM python\n",
+    "WORKDIR /app\n",
+    "RUN pip install streamlit psycopg2-binary -q\n",
+    "COPY app.py env.py ./app/\n",
+    "EXPOSE 8501\n",
+    "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4dc078-f890-4f0b-ad00-275762642247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build an image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba63d4a3-4c25-4014-b9a3-d0328411ad65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker build -t app . -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77386841-bd87-454e-a6b2-19c57393335c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List images\n",
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d4fe06f-a2bc-4106-a5d7-fd9fd1afbb27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the app in detached mode\n",
+    "!docker run -d -p 8501:8501 -v $(pwd):/app app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2c940f1-451a-4932-8a62-c4eefe66937d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c216d4a-2fd3-4bcf-8778-7320559110c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove all docker ps\n",
+    "# !docker rm -f $(docker ps -aq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9fb8bbb-776d-4180-b2b6-34e04c810550",
+   "metadata": {},
+   "source": [
+    "#### Connect to the database from Jupyter Lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe1bd0c5-9284-4f15-80be-ae1a073b4f72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "from env import *\n",
+    "\n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ee25b032-290f-4943-83b7-8c81ea3ccb6b",
+   "metadata": {},
+   "source": [
+    "SQL = \"\"\n",
+    "cur.execute(SQL)\n",
+    "con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfc1ae25-bf9c-4cdf-b42d-ff8b1dd84468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = con.cursor()\n",
+    "SQL = \"SELECT * FROM notes\"\n",
+    "cur.execute(SQL)\n",
+    "cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58892438-7c00-4f8e-b5f4-ed2e7f7b84e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9bf7337-86ee-4009-92b8-7edf2f2fede5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = 46\n",
+    "name='Matt'\n",
+    "header='Hello'\n",
+    "note='Hi'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92e8e57a-3cd6-4379-b4e2-122614005db2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update\n",
+    "cur.execute(f\"UPDATE notes SET id={id}, name='{name}', header='{header}', note='{note}' WHERE id = {id}\")\n",
+    "con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a37cd7a-8389-4c1a-a5b4-303a84b5e7af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f12666cc-fc5f-458a-b3fb-99e9bddfbe6d",
