--- a/13-App-site-blog/site-/site dev.ipynb
+++ b/13-App-site-blog/site-/site dev.ipynb
@@ -211,7 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "8608140d-ad86-40a6-8541-805327ca4ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Restart the kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "b6afae1e-c0b4-4956-ac15-cd3f77df6a08",
    "metadata": {},
    "outputs": [],
@@ -222,17 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8608140d-ad86-40a6-8541-805327ca4ec6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Restart the terminal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8311a023-2cf6-4f61-ac7f-2b0dbb0c1e03",
    "metadata": {},
    "outputs": [],
@@ -242,38 +242,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ad4e247c-cb86-479a-807f-78fa14b7378e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyter/tech-stack/13-App-site-blog/site-/app\n"
+     ]
+    }
+   ],
    "source": [
     "cd app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a9585a48-7f0f-4154-806c-0ccbf3cd9f82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing env.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='35.193.80.15'\n",
+    "HOST='34.173.135.93'\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "f928a6ab-daa5-4680-adff-87640aa88531",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -361,18 +385,21 @@
     "            #### {note} \\n\n",
     "            :man: {name} \\n\n",
     "            :watch: {time}\"\"\")\n",
-    "#    if st.button(f\"UPDATE ID #: {id}\"):\n",
-    "#        name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
-    "#        header = st.text_input(f\"Header (ID #: {id})\", header)\n",
-    "#        note = st.text_area(f\"Note (ID #: {id})\", note)\n",
-    "#        if st.button(f\"CONFIRM UPDATE ID #: {id}\"):\n",
-    "#            cur.execute(f\"UPDATE notes SET id={id}, name='{name}', header='{header}', note='{note}' WHERE id = {id}\")\n",
-    "#            con.commit()\n",
-    "#            st.success(\"Successfully Edited.\")\n",
-    "    if st.button(f\"DELETE ID #: {id}\"):\n",
-    "        cur.execute(f\"DELETE FROM notes WHERE id = {id}\")\n",
-    "        con.commit()\n",
-    "        st.success(\"Successfully Deleted.\")\n",
+    "\n",
+    "    with st.expander(f\"Edit or Delete (ID #: {id})\"):\n",
+    "        name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
+    "        header = st.text_input(f\"Header (ID #: {id})\", header)\n",
+    "        note = st.text_area(f\"Note (ID #: {id})\", note)\n",
+    "        if st.button(f\"UPDATE ID #: {id}\"):\n",
+    "            SQL = \" UPDATE notes SET id=%s, name=%s, header=%s, note=%s WHERE id = %s\"\n",
+    "            data = (id, name, header, note, id)\n",
+    "            cur.execute(SQL, data)\n",
+    "            con.commit()\n",
+    "            st.success(\"Successfully Edited.\")\n",
+    "        if st.button(f\"DELETE ID #: {id}\"):\n",
+    "            cur.execute(f\"DELETE FROM notes WHERE id = {id}\")\n",
+    "            con.commit()\n",
+    "            st.success(\"Successfully Deleted.\")\n",
     "    st.subheader(\"\",divider=\"gray\")\n",
     "    \n",
     "# Close Connection\n",
@@ -381,7 +408,7 @@
     "\n",
     "#----------Counter----------#\n",
     "# Title\n",
-    "st.header(\"Counter App\")\n",
+    "st.header(\"Counter\")\n",
     "st.caption(\"\"\"\n",
     "            Count every request in this app.\n",
     "            \"\"\")\n",
@@ -423,15 +450,16 @@
     "st.write(f\"Current: {time}\")\n",
     "# Previous hits\n",
     "st.divider()\n",
-    "st.write(\"### *Previous Views*\")\n",
-    "# Write the data\n",
-    "cur.execute(\"\"\"\n",
-    "            SELECT * \n",
-    "            FROM counter\n",
-    "            ORDER BY time DESC\n",
-    "            \"\"\")\n",
-    "for _, _, time in cur.fetchall():\n",
-    "    st.text(f\"{time}\")\n",
+    "with st.expander(\"See Previous Views\"):\n",
+    "    st.write(\"**Previous Views**\")\n",
+    "    # Write the data\n",
+    "    cur.execute(\"\"\"\n",
+    "                SELECT * \n",
+    "                FROM counter\n",
+    "                ORDER BY time DESC\n",
+    "                \"\"\")\n",
+    "    for _, _, time in cur.fetchall():\n",
+    "        st.text(f\"{time}\")\n",
     "    \n",
     "# Close Connection\n",
     "cur.close()\n",
@@ -440,10 +468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8b170876-29c0-4721-ab3f-808f4fbc2652",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing Dockerfile\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -466,20 +502,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ba63d4a3-4c25-4014-b9a3-d0328411ad65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sha256:b53995952b15554a05037db570689177a35696f739d36117fd748b4a1cb9ed16\n"
+     ]
+    }
+   ],
    "source": [
     "!docker build -t app . -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "77386841-bd87-454e-a6b2-19c57393335c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPOSITORY       TAG       IMAGE ID       CREATED                  SIZE\n",
+      "app              latest    b53995952b15   Less than a second ago   1.5GB\n",
+      "dpage/pgadmin4   latest    f70baa3facc1   2 weeks ago              534MB\n",
+      "python           latest    2acccf902fa3   3 weeks ago              1.02GB\n",
+      "postgres         latest    fbd1be2cbb1f   7 weeks ago              417MB\n"
+     ]
+    }
+   ],
    "source": [
     "# List images\n",
     "!docker images"
@@ -487,10 +543,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6d4fe06f-a2bc-4106-a5d7-fd9fd1afbb27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c71b041ff6d18588d498cbb0343810210ce1d94d9e64015333d517839921ffe5\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the app in detached mode\n",
     "!docker run -d -p 8501:8501 -v $(pwd):/app app"
@@ -498,10 +562,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d2c940f1-451a-4932-8a62-c4eefe66937d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID   IMAGE            COMMAND                  CREATED                  STATUS                  PORTS                                            NAMES\n",
+      "c71b041ff6d1   app              \"streamlit run app.p…\"   Less than a second ago   Up Less than a second   0.0.0.0:8501->8501/tcp, :::8501->8501/tcp        modest_wu\n",
+      "9a0dcd8c2bc4   dpage/pgadmin4   \"/entrypoint.sh\"         7 minutes ago            Up 7 minutes            443/tcp, 0.0.0.0:8000->80/tcp, :::8000->80/tcp   blissful_goodall\n",
+      "4d1deb153fbe   postgres         \"docker-entrypoint.s…\"   7 minutes ago            Up 7 minutes            0.0.0.0:5000->5432/tcp, :::5000->5432/tcp        postgres-sql\n"
+     ]
+    }
+   ],
    "source": [
     "!docker ps -a"
    ]
