Add and modify files

--- a/13-App-site-blog/site-/site dev.ipynb
+++ b/13-App-site-blog/site-/site dev.ipynb
@@ -283,21 +283,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "f928a6ab-daa5-4680-adff-87640aa88531",
+   "cell_type": "raw",
+   "id": "b9eccf3c-3535-453a-8a4c-6f935f50f049",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting app.py\n"
-     ]
-    }
-   ],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -312,6 +302,7 @@
     "                   page_icon=\":cloud:\",\n",
     "                   menu_items={\n",
     "                       'About':\"# Matt Cloud Tech\"})\n",
+    "\n",
     "#----------About Me Section----------#\n",
     "st.title(\":cloud: Matt Cloud Tech\")\n",
     "st.subheader(\"\", divider=\"rainbow\")\n",
@@ -327,8 +318,28 @@
     "st.write(\":link: :book: [Project Repository](https://)\")\n",
     "st.write(\":link: :notebook: [Blog](https://)\")\n",
     "st.write(\":link: :hand: [Connect with me](https://)\")\n",
+    "#----------End of About Me Section----------#\n",
     "\n",
-    "#----------Notepad----------#\n",
+    "#----------Portfolio Section----------#\n",
+    "st.header(\"Project Collections\",divider=\"rainbow\")\n",
+    "\n",
+    "st.write(\"#### :link: [PROJECT TITLE #1](https://)\")\n",
+    "st.caption(\"Caption\")\n",
+    "with st.expander(f\"Learn more\"):\n",
+    "    st.write(\"Description\")\n",
+    "    \n",
+    "st.divider()\n",
+    "\n",
+    "st.write(\"#### :link: [PROJECT TITLE #2](https://)\")\n",
+    "st.caption(\"Caption\")\n",
+    "with st.expander(f\"Learn more\"):\n",
+    "    st.write(\"Description\")\n",
+    "st.divider()\n",
+    "\n",
+    "#----------End of Portfolio Section----------#\n",
+    "\n",
+    "\n",
+    "#----------Notepad Section----------#\n",
     "# Notepad Section\n",
     "# Header\n",
     "st.header(\"Notepad :notebook:\",divider=\"rainbow\")\n",
@@ -405,6 +416,7 @@
     "# Close Connection\n",
     "cur.close()\n",
     "con.close()\n",
+    "#----------End of Notepad Section----------#\n",
     "\n",
     "#----------Counter----------#\n",
     "# Title\n",
@@ -463,7 +475,7 @@
     "    \n",
     "# Close Connection\n",
     "cur.close()\n",
-    "con.close()"
+    "con.close()\n"
    ]
   },
   {
