Add and modify files

--- a/13-App-site-blog/site-/app/Untitled.ipynb
+++ b/13-App-site-blog/site-/app/Untitled.ipynb
@@ -26,6 +26,36 @@
    "id": "bc808653-ea60-4471-9575-808e718913e0",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "dir(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "560bb106-b644-4f72-8a3e-a4a83a03d7e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(st.chat_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a7c7d33-2a01-4019-b39e-66a9f06c9ac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(st.toggle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f0b4fd6-baa9-46fb-be59-0f870cf63b86",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
