Add and modify files

--- a/13-App-site-blog/site-/site dev.ipynb
+++ b/13-App-site-blog/site-/site dev.ipynb
@@ -311,8 +311,7 @@
     "        ### Good day :wave:.\n",
     "        ### My name is :blue[Matt]. I am a Cloud Technology Enthusiast.\n",
     "        ### Currently, I am learning and building Cloud Infrastructure, Data and CI/CD Pipelines, and Intelligent Systems. \n",
-    "        \"\"\")\n",
-    "\n",
+    "        \"\"\") \n",
     "st.divider()\n",
     "st.write(\":link: :computer: [Personal Website](https://)\")\n",
     "st.write(\":link: :book: [Project Repository](https://)\")\n",
@@ -371,8 +370,8 @@
     "    st.write(f\"\"\" \\n\n",
     "            ##### :pencil: {header} \\n\n",
     "            #### {note} \\n\n",
-    "            :man: {name} \\n\n",
-    "            :watch: {time}\"\"\")\n",
+    "            :man: {name} \\n\"\"\")\n",
+    "    st.caption(f\":watch: {time}\")\n",
     "    st.success(\"Successfully Added.\")\n",
     "    # st.balloons()\n",
     "    ### Insert into adatabase\n",
@@ -394,8 +393,8 @@
     "    st.write(f\"\"\" \\n\n",
     "            ##### :pencil: {header} \\n\n",
     "            #### {note} \\n\n",
-    "            :man: {name} \\n\n",
-    "            :watch: {time}\"\"\")\n",
+    "            :man: {name} \\n\"\"\")\n",
+    "    st.caption(f\":watch: {time}\")\n",
     "\n",
     "    with st.expander(f\"Edit or Delete (ID #: {id})\"):\n",
     "        name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
@@ -475,7 +474,67 @@
     "    \n",
     "# Close Connection\n",
     "cur.close()\n",
-    "con.close()\n"
+    "con.close()\n",
+    "\n",
+    "#----------Agent Section----------#\n",
+    "import time\n",
+    "st.header(\":eyeglasses: Agent :construction:\",divider=\"rainbow\")\n",
+    "st.caption(\"### Chat with my agent (still under construction)\")\n",
+    "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
+    "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
+    "\n",
+    "\n",
+    "               \n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "# Connect to a database\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Prompt\n",
+    "input_name = st.text_input(\"Your Name:\")\n",
+    "agent = st.toggle(\"**Let's go**\")\n",
+    "if agent:\n",
+    "    st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
+    "    prompt = st.chat_input(\"Talk to my agent\")\n",
+    "    if prompt:\n",
+    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "        st.write(f\":blue[{input_name}]: {prompt}\")\n",
+    "        st.caption(f\"{time}\")\n",
+    "        output = \"I'm still learning :book:. Check back later.\"\n",
+    "        st.success(f\":eyeglasses: Agent: {output}\")\n",
+    "        st.divider()\n",
+    "\n",
+    "        ### Insert into a database\n",
+    "        SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
+    "        data = (input_name, prompt, output, time)\n",
+    "        cur.execute(SQL, data)\n",
+    "        con.commit()\n",
+    "\n",
+    "\n",
+    "        with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
+    "            cur.execute(f\"\"\"\n",
+    "                        SELECT * \n",
+    "                        FROM chats\n",
+    "                        WHERE name='{input_name}'\n",
+    "                        ORDER BY time DESC\n",
+    "                        \"\"\")\n",
+    "            for id, name, prompt, output, time in cur.fetchall():\n",
+    "                    st.write(f\":blue[{name}]: {prompt}\")\n",
+    "                    st.caption(f\"{time}\")\n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "#----------End of Agent Section----------#"
    ]
   },
   {
