Add and modify files

--- a/10-Database/Site Dev v2 with Deployment.ipynb
+++ b/10-Database/Site Dev v2 with Deployment.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "4b62cb12-3388-4814-88ee-b831d202cf87",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Site App with Database \n",
     "\n",
@@ -24,6 +26,7 @@
    "cell_type": "markdown",
    "id": "e25c683d-091f-4c28-90af-6004f4a6bea7",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -148,7 +151,10 @@
   {
    "cell_type": "markdown",
    "id": "994db0cc-9b39-4c6a-9bd0-95f1f681b8c2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Create a firewall (GCP)"
    ]
@@ -193,6 +199,7 @@
    "cell_type": "markdown",
    "id": "93642507-3df9-47d4-a801-af9e0fc596c4",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -242,36 +249,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0fa7da61-59f1-42c8-8bb4-ba8f61d58cde",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/tech-stack/10-Database/app-v2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd app-v2"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acc29874-2642-4d34-853d-3d36dbc9fb78",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## App"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5ae99ad1-a6e4-4a35-a9bb-c52810949096",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing env.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
@@ -283,21 +285,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "02de6c73-710b-4ac9-a00c-c1c026f1c2b0",
+   "cell_type": "raw",
+   "id": "2d154e0b-11f4-49c8-846b-7664467609e8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing app.py\n"
-     ]
-    }
-   ],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -549,18 +541,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "96804b5d-82aa-49a8-b052-5a76849b6684",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -573,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d2ccd74d-2000-4bcb-8012-f325a117053d",
    "metadata": {},
    "outputs": [],
@@ -583,40 +567,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "926aeda9-d4d9-4198-8c83-bf1652e2baaf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sha256:db058d5cc6c7666f576568918562cfc02f1e739889519b5fcd946ca6d96fd5e4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker build -t app . -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "08099916-9cb6-4e19-b2c5-0ffa011dfaca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "REPOSITORY       TAG       IMAGE ID       CREATED                  SIZE\n",
-      "app              latest    db058d5cc6c7   Less than a second ago   1.5GB\n",
-      "dpage/pgadmin4   latest    f70baa3facc1   2 weeks ago              534MB\n",
-      "python           latest    2acccf902fa3   3 weeks ago              1.02GB\n",
-      "postgres         latest    fbd1be2cbb1f   7 weeks ago              417MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List images\n",
     "!docker images"
@@ -624,18 +588,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d3e6bbdb-8291-4a43-9055-39b014b6f828",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "03e20831494e3ba58a2fd7205fd790947d296e5fc4fa72e98b572d2290edfcea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the app in detached mode\n",
     "!docker run -d -p 8501:8501 -v $(pwd):/app app"
@@ -643,21 +599,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d0156a6d-1201-458a-bc6b-440c1928cd96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTAINER ID   IMAGE            COMMAND                  CREATED         STATUS                  PORTS                                            NAMES\n",
-      "03e20831494e   app              \"streamlit run app.p…\"   1 second ago    Up Less than a second   0.0.0.0:8501->8501/tcp, :::8501->8501/tcp        hopeful_williamson\n",
-      "8613ef809249   dpage/pgadmin4   \"/entrypoint.sh\"         2 minutes ago   Up 2 minutes            443/tcp, 0.0.0.0:8000->80/tcp, :::8000->80/tcp   xenodochial_boyd\n",
-      "bf38de32be17   postgres         \"docker-entrypoint.s…\"   2 minutes ago   Up 2 minutes            0.0.0.0:5000->5432/tcp, :::5000->5432/tcp        postgres-sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker ps -a"
    ]
@@ -675,10 +620,115 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56443c4b-7e81-4f64-b5d8-366c03c3502c",
+   "id": "6c2719e2-fe5e-4357-8687-e3ca6a891660",
    "metadata": {},
    "source": [
-    "#### Connect to the database from Jupyter Lab"
+    "## Deploy using Cloud Build, Artifact Registry, and Cloud Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35cd4570-26fe-4395-95df-dd1b0937fc2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "# Create a Docker repository in Artifact Registry\n",
+    "gcloud artifacts repositories create app-v2 \\\n",
+    "    --repository-format=docker \\\n",
+    "    --location=us-west2 \\\n",
+    "    --description=\"Docker repository\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db5d4013-5330-449a-9953-f7a30c5f8c4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "# Verify\n",
+    "gcloud artifacts repositories list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48651a63-b471-4be6-992a-67c6d7184edf",
+   "metadata": {},
+   "source": [
+    "### Build an image using Dockerfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d64fac1-49b1-4ac5-9731-55eeef795a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if the path is correct\n",
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "318ea170-25b4-45e9-b0ad-f56626f18291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd app-v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "007939f8-986d-491f-b7ea-44d2fd625eba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud builds submit \\\n",
+    "    --region=us-west2 \\\n",
+    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54173fd8-08e0-4000-8d27-858b0e09d6de",
+   "metadata": {},
+   "source": [
+    "### Pull the image from Artifact Registry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e48cc8c-1f82-46ba-af7e-a226e07ec819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud artifacts repositories "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583042c2-fdd7-4543-a484-1b2bad14b298",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56443c4b-7e81-4f64-b5d8-366c03c3502c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Connect to the database from Jupyter Lab"
    ]
   },
   {
