--- a/10-Database/Site Dev v2 with Deployment.ipynb
+++ b/10-Database/Site Dev v2 with Deployment.ipynb
@@ -621,7 +621,9 @@
   {
    "cell_type": "markdown",
    "id": "6c2719e2-fe5e-4357-8687-e3ca6a891660",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Deploy using Cloud Build, Artifact Registry, and Cloud Run"
    ]
@@ -705,11 +707,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e48cc8c-1f82-46ba-af7e-a226e07ec819",
+   "id": "0caa98be-8796-48c7-aabd-b4af32a6a00c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!gcloud artifacts repositories "
+    "# !gcloud auth configure-docker us-west2-docker.pkg.dev"
    ]
   },
   {
@@ -718,7 +720,49 @@
    "id": "583042c2-fdd7-4543-a484-1b2bad14b298",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!docker pull us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5d5c1e2-c717-41a1-8b2f-5ee33f82b3dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fc366c0-2e35-4148-bf3c-4c48e62fb176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -d -p 8501:8501 -v $(pwd):/app us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb2d55dc-01d7-44a7-8ef4-f19115f5547b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b705b4-3f19-410d-a160-9083d720b0b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !docker rm -f <...>"
+   ]
   },
   {
    "cell_type": "markdown",
