Add and modify files

--- a/10-Database/Environment-Variables.ipynb
+++ b/10-Database/Environment-Variables.ipynb
@@ -53,7 +53,6 @@
    "cell_type": "markdown",
    "id": "d9ceace1-c0ca-48b2-9d2b-8d0d8862b1a0",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -97,7 +96,6 @@
    "cell_type": "markdown",
    "id": "02bb3d33-1f98-4542-b16a-c80d79761da6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -180,14 +178,13 @@
     "RUN pip install streamlit psycopg2-binary -q\n",
     "COPY app.py env.py ./app/\n",
     "EXPOSE 9000\n",
-    "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
+    "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\",\"--server.port\", \"9000\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "86a027d6-aa78-4fe9-bdbe-8e278cd02935",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -223,7 +220,7 @@
    "outputs": [],
    "source": [
     "# Run the app in detached mode\n",
-    "!docker run -d -p 8501:8501 -v $(pwd):/app app-run"
+    "!docker run -d -p 9000:9000 -v $(pwd):/app app-run"
    ]
   },
   {
@@ -270,19 +267,149 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdf0ec60-277a-41fb-81ae-69ce870e8bd7",
-   "metadata": {},
+   "id": "100b5b17-1d16-45e7-adbe-942236526880",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### Build the image in cloud build"
+    "### Deploy using Cloud Build, Artifact Registry, and Cloud Run"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c12298-087b-429e-9d15-6e976d7d2d25",
+   "id": "12acfc0c-06a0-4a93-a1c5-291ffc94608a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sh\n",
+    "# Create a Docker repository in Artifact Registry\n",
+    "gcloud artifacts repositories create app-run \\\n",
+    "    --repository-format=docker \\\n",
+    "    --location=us-west2 \\\n",
+    "    --description=\"Docker repository\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7d5c57c-be64-464c-970a-0117f45abdd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "# Verify\n",
+    "gcloud artifacts repositories list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899f07ef-82ac-432a-a6a2-9b7d1f2dab5d",
+   "metadata": {},
+   "source": [
+    "### Build an image using Dockerfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15e8fb5c-e7be-4c0b-aa42-1cef917db3c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if the path is correct\n",
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3090bf78-b54e-46b0-a14d-ce7e088be3a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd app-run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c054eb03-455f-4c6d-8099-f74f663b0809",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud builds submit \\\n",
+    "    --region=us-west2 \\\n",
+    "    --tag us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-run/app-run:tag4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e41cd11-b962-4e4a-954d-9593b8bc58be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It didn't work in Cloud Run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc1dcd6-e786-4ae2-a16c-2bee718869b7",
+   "metadata": {},
+   "source": [
+    "### Pull the image from Artifact Registry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1eb3996-db06-460e-835f-e57d325651f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !gcloud auth configure-docker us-west2-docker.pkg.dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96a027f2-32b3-4b94-b440-3685f0d0087b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker pull us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc5bfbf-c709-47ec-b54a-e32f7a80c30b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8866ad82-9349-42ef-bb0a-099ca9ba2cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -d -p 8501:8501 -v $(pwd):/app us-west2-docker.pkg.dev/$(gcloud config get-value project)/app-v2/app:tag1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f16d782-ef39-4f4a-aef9-87fddfe4d8fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !docker rm -f <...>"
+   ]
   }
  ],
  "metadata": {
