Add and modify files

--- a/14-App-site-blog-v3/site-/site dev v3.ipynb
+++ b/14-App-site-blog-v3/site-/site dev v3.ipynb
@@ -13,7 +13,7 @@
    "id": "c079758c-1724-441f-bbf7-d01c0522f246",
    "metadata": {},
    "source": [
-    "# Site App with Database \n",
+    "# Site App with Database v3 (with Agent)\n",
     "\n",
     "* About Me Section\n",
     "* Notepad: Create, Read\n",
@@ -24,6 +24,7 @@
    "cell_type": "markdown",
    "id": "ae9a2e06-0693-4170-b74b-98636adfb294",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8608140d-ad86-40a6-8541-805327ca4ec6",
    "metadata": {},
    "outputs": [],
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b6afae1e-c0b4-4956-ac15-cd3f77df6a08",
    "metadata": {},
    "outputs": [],
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8311a023-2cf6-4f61-ac7f-2b0dbb0c1e03",
    "metadata": {},
    "outputs": [],
@@ -242,49 +243,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ad4e247c-cb86-479a-807f-78fa14b7378e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/tech-stack/13-App-site-blog/site-/app\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "351fb3f4-c8c8-4685-9e1c-7b070a21f388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a9585a48-7f0f-4154-806c-0ccbf3cd9f82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing env.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='34.173.135.93'\n",
+    "HOST='34.134.247.150'\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "b9eccf3c-3535-453a-8a4c-6f935f50f049",
+   "id": "a86cccd2-a588-4e2f-a09a-5de9f0f908a6",
    "metadata": {
     "tags": []
    },
@@ -539,18 +534,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8b170876-29c0-4721-ab3f-808f4fbc2652",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -573,40 +560,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ba63d4a3-4c25-4014-b9a3-d0328411ad65",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sha256:b53995952b15554a05037db570689177a35696f739d36117fd748b4a1cb9ed16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker build -t app . -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "77386841-bd87-454e-a6b2-19c57393335c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "REPOSITORY       TAG       IMAGE ID       CREATED                  SIZE\n",
-      "app              latest    b53995952b15   Less than a second ago   1.5GB\n",
-      "dpage/pgadmin4   latest    f70baa3facc1   2 weeks ago              534MB\n",
-      "python           latest    2acccf902fa3   3 weeks ago              1.02GB\n",
-      "postgres         latest    fbd1be2cbb1f   7 weeks ago              417MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List images\n",
     "!docker images"
@@ -614,18 +581,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6d4fe06f-a2bc-4106-a5d7-fd9fd1afbb27",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c71b041ff6d18588d498cbb0343810210ce1d94d9e64015333d517839921ffe5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the app in detached mode\n",
     "!docker run -d -p 8501:8501 -v $(pwd):/app app"
@@ -633,21 +592,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d2c940f1-451a-4932-8a62-c4eefe66937d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTAINER ID   IMAGE            COMMAND                  CREATED                  STATUS                  PORTS                                            NAMES\n",
-      "c71b041ff6d1   app              \"streamlit run app.p…\"   Less than a second ago   Up Less than a second   0.0.0.0:8501->8501/tcp, :::8501->8501/tcp        modest_wu\n",
-      "9a0dcd8c2bc4   dpage/pgadmin4   \"/entrypoint.sh\"         7 minutes ago            Up 7 minutes            443/tcp, 0.0.0.0:8000->80/tcp, :::8000->80/tcp   blissful_goodall\n",
-      "4d1deb153fbe   postgres         \"docker-entrypoint.s…\"   7 minutes ago            Up 7 minutes            0.0.0.0:5000->5432/tcp, :::5000->5432/tcp        postgres-sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker ps -a"
    ]
