Add and modify files

--- a/14-App-site-blog-v3/site-/site dev v3.ipynb
+++ b/14-App-site-blog-v3/site-/site dev v3.ipynb
@@ -296,10 +296,10 @@
     "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
     "                   page_icon=\":cloud:\",\n",
     "                   menu_items={\n",
-    "                       'About':\"# Matt Cloud Tech\"})\n",
+    "                       'About':\"# Matt Cloud Tech Version 3\"})\n",
     "\n",
     "#----------About Me Section----------#\n",
-    "st.title(\":cloud: Matt Cloud Tech\")\n",
+    "st.title(\":cloud: Matt Cloud Tech v3\")\n",
     "st.subheader(\"\", divider=\"rainbow\")\n",
     "\n",
     "st.write(\"\"\"\n",
@@ -533,6 +533,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1fb01f7-2511-4624-bebc-2e92b1a7e7e5",
+   "metadata": {},
+   "source": [
+    "%%writefile app.py\n",
+    "# Agent only\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "from env import *\n",
+    "\n",
+    "#----------Agent Section Only using chat_messgae----------#\n",
+    "import time\n",
+    "st.header(\":eyeglasses: Agent :construction:\",divider=\"rainbow\")\n",
+    "st.caption(\"### Chat with my agent (still under construction)\")\n",
+    "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
+    "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
+    "\n",
+    "\n",
+    "               \n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "# Connect to a database\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Prompt\n",
+    "input_name = st.text_input(\"Your Name:\")\n",
+    "agent = st.toggle(\"**Let's go**\")\n",
+    "if agent:\n",
+    "    st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
+    "    prompt = st.chat_input(\"Talk to my agent\")\n",
+    "    if prompt:\n",
+    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "        st.write(f\":blue[{input_name}]: {prompt}\")\n",
+    "        st.caption(f\"{time}\")\n",
+    "        output = \"I'm still learning :book:. Check back later.\"\n",
+    "        st.success(f\":eyeglasses: Agent: {output}\")\n",
+    "        st.divider()\n",
+    "\n",
+    "        ### Insert into a database\n",
+    "        SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
+    "        data = (input_name, prompt, output, time)\n",
+    "        cur.execute(SQL, data)\n",
+    "        con.commit()\n",
+    "\n",
+    "\n",
+    "        with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
+    "            cur.execute(f\"\"\"\n",
+    "                        SELECT * \n",
+    "                        FROM chats\n",
+    "                        WHERE name='{input_name}'\n",
+    "                        ORDER BY time DESC\n",
+    "                        \"\"\")\n",
+    "            for id, name, prompt, output, time in cur.fetchall():\n",
+    "                    st.write(f\":blue[{name}]: {prompt}\")\n",
+    "                    st.caption(f\"{time}\")\n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "#----------End of Agent Section----------#"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8b170876-29c0-4721-ab3f-808f4fbc2652",
@@ -546,6 +621,26 @@
     "COPY app.py env.py ./app/\n",
     "EXPOSE 8501\n",
     "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b7e4b65-2fb9-4606-a303-f74de6746b92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41f0b6ef-344f-452d-a310-64463260c0f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
    ]
   },
   {
