--- a/14-App-site-blog-v3/site-/site dev v3.ipynb
+++ b/14-App-site-blog-v3/site-/site dev v3.ipynb
@@ -538,7 +538,6 @@
    "metadata": {},
    "source": [
     "%%writefile app.py\n",
-    "# Agent only\n",
     "# Import libraries\n",
     "import streamlit as st\n",
     "import psycopg2\n",
@@ -548,7 +547,7 @@
     "\n",
     "#----------Agent Section Only using chat_messgae----------#\n",
     "import time\n",
-    "st.header(\":eyeglasses: Agent :construction:\",divider=\"rainbow\")\n",
+    "st.header(\":computer: Agent :construction:\",divider=\"rainbow\")\n",
     "st.caption(\"### Chat with my agent (still under construction)\")\n",
     "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
     "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
@@ -578,10 +577,13 @@
     "    prompt = st.chat_input(\"Talk to my agent\")\n",
     "    if prompt:\n",
     "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
-    "        st.write(f\":blue[{input_name}]: {prompt}\")\n",
-    "        st.caption(f\"{time}\")\n",
+    "        message = st.chat_message(\"user\")\n",
+    "        message.write(f\":blue[{input_name}]: {prompt}\")\n",
+    "        message.caption(f\"{time}\")\n",
+    "        message = st.chat_message(\"assistant\")\n",
     "        output = \"I'm still learning :book:. Check back later.\"\n",
-    "        st.success(f\":eyeglasses: Agent: {output}\")\n",
+    "        message.success(f\"Agent: {output}\")\n",
+    "        message.caption(f\"{time}\")\n",
     "        st.divider()\n",
     "\n",
     "        ### Insert into a database\n",
@@ -596,15 +598,21 @@
     "                        SELECT * \n",
     "                        FROM chats\n",
     "                        WHERE name='{input_name}'\n",
-    "                        ORDER BY time DESC\n",
+    "                        ORDER BY time ASC\n",
     "                        \"\"\")\n",
     "            for id, name, prompt, output, time in cur.fetchall():\n",
-    "                    st.write(f\":blue[{name}]: {prompt}\")\n",
-    "                    st.caption(f\"{time}\")\n",
+    "                message = st.chat_message(\"user\")\n",
+    "                message.write(f\":blue[{name}]: {prompt}\")\n",
+    "                message.caption(f\"{time}\")\n",
+    "                message = st.chat_message(\"assistant\")\n",
+    "                output = \"I'm still learning :book:. Check back later.\"\n",
+    "                message.success(f\"Agent: {output}\")\n",
+    "                message.caption(f\"{time}\")\n",
     "# Close Connection\n",
     "cur.close()\n",
     "con.close()\n",
-    "#----------End of Agent Section----------#"
+    "#----------End of Agent Section----------#\n",
+    "\n"
    ]
   },
   {
