Add and modify files

--- a/14-App-site-blog-v3/site-v3-with-vertex-ai/site dev v3.ipynb
+++ b/14-App-site-blog-v3/site-v3-with-vertex-ai/site dev v3.ipynb
@@ -24,7 +24,6 @@
    "cell_type": "markdown",
    "id": "ae9a2e06-0693-4170-b74b-98636adfb294",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -75,6 +74,16 @@
    "outputs": [],
    "source": [
     "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90c7cee4-27c8-4799-b396-d05f78b761e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker rm -f $(docker ps -aq)"
    ]
   },
   {
@@ -272,7 +281,7 @@
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='34.134.247.150'\n",
+    "HOST='34.27.0.180'\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
@@ -533,8 +542,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d1fb01f7-2511-4624-bebc-2e92b1a7e7e5",
+   "cell_type": "raw",
+   "id": "db4b5730-f6e9-4aff-ae4a-9cce0104ed27",
    "metadata": {},
    "source": [
     "%%writefile app.py\n",
@@ -625,7 +634,7 @@
     "%%writefile Dockerfile\n",
     "FROM python\n",
     "WORKDIR /app\n",
-    "RUN pip install streamlit psycopg2-binary -q\n",
+    "RUN pip install streamlit psycopg2-binary google-cloud-aiplatform -q\n",
     "COPY app.py env.py ./app/\n",
     "EXPOSE 8501\n",
     "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
