--- a/14-App-site-blog-v3/site-v3-with-vertex-ai/site dev v3.ipynb
+++ b/14-App-site-blog-v3/site-v3-with-vertex-ai/site dev v3.ipynb
@@ -625,6 +625,113 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "337ef1ec-f1bf-47fd-bc1a-1f0954e70757",
+   "metadata": {},
+   "source": [
+    "%%writefile app.py\n",
+    "# It's working. ^_^\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "from env import *\n",
+    "\n",
+    "#----------Vertex AI----------#\n",
+    "import vertexai\n",
+    "from vertexai.language_models import TextGenerationModel\n",
+    "\n",
+    "vertexai.init(project=\"matt-project-training\", location=\"us-central1\")\n",
+    "parameters = {\n",
+    "    \"candidate_count\": 1,\n",
+    "    \"max_output_tokens\": 1024,\n",
+    "    \"temperature\": 0.2,\n",
+    "    \"top_p\": 0.8,\n",
+    "    \"top_k\": 40\n",
+    "}\n",
+    "model = TextGenerationModel.from_pretrained(\"text-bison\")\n",
+    "response = model.predict(\n",
+    "    \"\"\"Hi\"\"\",\n",
+    "    **parameters\n",
+    ")\n",
+    "st.write(f\"Response from Model: {response.text}\")\n",
+    "\n",
+    "#----------End of Vertex AI----------#\n",
+    "\n",
+    "#----------Agent Section Only----------#\n",
+    "import time\n",
+    "st.header(\":computer: Agent :construction:\",divider=\"rainbow\")\n",
+    "st.caption(\"### Chat with my agent (still under construction)\")\n",
+    "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
+    "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
+    "\n",
+    "\n",
+    "               \n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "# Connect to a database\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Prompt\n",
+    "input_name = st.text_input(\"Your Name:\")\n",
+    "agent = st.toggle(\"**Let's go**\")\n",
+    "if agent:\n",
+    "    st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
+    "    prompt = st.chat_input(\"Talk to my agent\")\n",
+    "    if prompt:\n",
+    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "        message = st.chat_message(\"user\")\n",
+    "        message.write(f\":blue[{input_name}]: {prompt}\")\n",
+    "        message.caption(f\"{time}\")\n",
+    "        message = st.chat_message(\"assistant\")\n",
+    "        response = model.predict(prompt,\n",
+    "            **parameters\n",
+    "        )\n",
+    "        output = response.text\n",
+    "        message.write(output)\n",
+    "        message.caption(f\"{time}\")\n",
+    "        st.divider()\n",
+    "\n",
+    "        ### Insert into a database\n",
+    "        SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
+    "        data = (input_name, prompt, output, time)\n",
+    "        cur.execute(SQL, data)\n",
+    "        con.commit()\n",
+    "\n",
+    "\n",
+    "    with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
+    "        cur.execute(f\"\"\"\n",
+    "                    SELECT * \n",
+    "                    FROM chats\n",
+    "                    WHERE name='{input_name}'\n",
+    "                    ORDER BY time ASC\n",
+    "                    \"\"\")\n",
+    "        for id, name, prompt, output, time in cur.fetchall():\n",
+    "            message = st.chat_message(\"user\")\n",
+    "            message.write(f\":blue[{name}]: {prompt}\")\n",
+    "            message.caption(f\"{time}\")\n",
+    "            message = st.chat_message(\"assistant\")\n",
+    "            message.write(output)\n",
+    "            message.caption(f\"{time}\")\n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "#----------End of Agent Section Only----------#\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8b170876-29c0-4721-ab3f-808f4fbc2652",
