--- a/15-App-site-blog-v4/site-v4/site dev v4.ipynb
+++ b/15-App-site-blog-v4/site-v4/site dev v4.ipynb
@@ -13,17 +13,20 @@
    "id": "c079758c-1724-441f-bbf7-d01c0522f246",
    "metadata": {},
    "source": [
-    "# Site App with Database \n",
+    "# Site App with Database v4\n",
     "\n",
     "* About Me Section\n",
+    "* Counter\n",
+    "* Portfolio\n",
     "* Notepad: Create, Read\n",
-    "* Counter"
+    "* Agent + Vertex AI"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "ae9a2e06-0693-4170-b74b-98636adfb294",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -33,7 +36,10 @@
   {
    "cell_type": "markdown",
    "id": "4d4bb2cb-bb1e-44d7-9cd3-723e5945ada4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Postgres Docker"
    ]
@@ -117,7 +123,10 @@
   {
    "cell_type": "markdown",
    "id": "9222c14c-f28e-4e18-b818-4d819eee652a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### pgAdmin"
    ]
@@ -148,7 +157,10 @@
   {
    "cell_type": "markdown",
    "id": "6ca6c7d0-96d9-42e6-9fef-ba1e37d7e514",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Create a firewall (GCP)"
    ]
@@ -167,7 +179,9 @@
   {
    "cell_type": "markdown",
    "id": "7af4f57e-88ce-40d6-8269-c1ad7fc2e491",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Open pgAdmin Browser"
    ]
@@ -191,12 +205,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1f4c638-8072-43d1-89a9-1617ef15ff4b",
+   "id": "f4a64628-8513-45fd-9777-b7795584e9a9",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Install and import libraries"
+    "## Create the app and create and run the image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1f4c638-8072-43d1-89a9-1617ef15ff4b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Install and import libraries"
    ]
   },
   {
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8608140d-ad86-40a6-8541-805327ca4ec6",
    "metadata": {},
    "outputs": [],
@@ -221,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b6afae1e-c0b4-4956-ac15-cd3f77df6a08",
    "metadata": {},
    "outputs": [],
@@ -232,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8311a023-2cf6-4f61-ac7f-2b0dbb0c1e03",
    "metadata": {},
    "outputs": [],
@@ -241,51 +266,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b694f97-1535-44f6-bb64-7624697be0d9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Application"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ad4e247c-cb86-479a-807f-78fa14b7378e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/tech-stack/13-App-site-blog/site-/app\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "351fb3f4-c8c8-4685-9e1c-7b070a21f388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a9585a48-7f0f-4154-806c-0ccbf3cd9f82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing env.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile env.py\n",
     "# DB Credentials\n",
     "DBNAME=\"matt\"\n",
     "USER='matt'\n",
-    "HOST='34.173.135.93'\n",
+    "HOST=''\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "b9eccf3c-3535-453a-8a4c-6f935f50f049",
+   "id": "a86cccd2-a588-4e2f-a09a-5de9f0f908a6",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "source": [
@@ -301,10 +334,10 @@
     "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
     "                   page_icon=\":cloud:\",\n",
     "                   menu_items={\n",
-    "                       'About':\"# Matt Cloud Tech\"})\n",
+    "                       'About':\"# Matt Cloud Tech Version 3\"})\n",
     "\n",
     "#----------About Me Section----------#\n",
-    "st.title(\":cloud: Matt Cloud Tech\")\n",
+    "st.title(\":cloud: Matt Cloud Tech v3\")\n",
     "st.subheader(\"\", divider=\"rainbow\")\n",
     "\n",
     "st.write(\"\"\"\n",
@@ -538,19 +571,109 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "0a919d2f-c0ee-46b6-abc4-7bd1f214f836",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "source": [
+    "%%writefile app.py\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import psycopg2\n",
+    "import os\n",
+    "import time\n",
+    "from env import *\n",
+    "\n",
+    "#----------Agent Section Only using chat_messgae----------#\n",
+    "import time\n",
+    "st.header(\":computer: Agent :construction:\",divider=\"rainbow\")\n",
+    "st.caption(\"### Chat with my agent (still under construction)\")\n",
+    "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
+    "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
+    "\n",
+    "\n",
+    "               \n",
+    "# Variable\n",
+    "database_name = DBNAME\n",
+    "# Connect to a database\n",
+    "con = psycopg2.connect(f\"\"\"\n",
+    "                       dbname={DBNAME}\n",
+    "                       user={USER}\n",
+    "                       host={HOST}\n",
+    "                       port={PORT}\n",
+    "                       password={PASSWORD}\n",
+    "                       \"\"\")\n",
+    "cur = con.cursor()\n",
+    "# Create a table if not exists\n",
+    "cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
+    "con.commit()\n",
+    "\n",
+    "# Prompt\n",
+    "input_name = st.text_input(\"Your Name:\")\n",
+    "agent = st.toggle(\"**Let's go**\")\n",
+    "if agent:\n",
+    "    st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
+    "    prompt = st.chat_input(\"Talk to my agent\")\n",
+    "    if prompt:\n",
+    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "        message = st.chat_message(\"user\")\n",
+    "        message.write(f\":blue[{input_name}]: {prompt}\")\n",
+    "        message.caption(f\"{time}\")\n",
+    "        message = st.chat_message(\"assistant\")\n",
+    "        output = \"I'm still learning :book:. Check back later.\"\n",
+    "        message.success(f\"Agent: {output}\")\n",
+    "        message.caption(f\"{time}\")\n",
+    "        st.divider()\n",
+    "\n",
+    "        ### Insert into a database\n",
+    "        SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
+    "        data = (input_name, prompt, output, time)\n",
+    "        cur.execute(SQL, data)\n",
+    "        con.commit()\n",
+    "\n",
+    "\n",
+    "        with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
+    "            cur.execute(f\"\"\"\n",
+    "                        SELECT * \n",
+    "                        FROM chats\n",
+    "                        WHERE name='{input_name}'\n",
+    "                        ORDER BY time ASC\n",
+    "                        \"\"\")\n",
+    "            for id, name, prompt, output, time in cur.fetchall():\n",
+    "                message = st.chat_message(\"user\")\n",
+    "                message.write(f\":blue[{name}]: {prompt}\")\n",
+    "                message.caption(f\"{time}\")\n",
+    "                message = st.chat_message(\"assistant\")\n",
+    "                output = \"I'm still learning :book:. Check back later.\"\n",
+    "                message.success(f\"Agent: {output}\")\n",
+    "                message.caption(f\"{time}\")\n",
+    "# Close Connection\n",
+    "cur.close()\n",
+    "con.close()\n",
+    "#----------End of Agent Section----------#\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "0589294a-ad42-4719-9c62-619822d6db46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%writefile app.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8b170876-29c0-4721-ab3f-808f4fbc2652",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile Dockerfile\n",
     "FROM python\n",
@@ -564,49 +687,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4dc078-f890-4f0b-ad00-275762642247",
+   "id": "4b7e4b65-2fb9-4606-a303-f74de6746b92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build an image"
+    "cd app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "41f0b6ef-344f-452d-a310-64463260c0f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbcae193-2958-436f-8ee0-1b1c625e57be",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Build the image locally image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ba63d4a3-4c25-4014-b9a3-d0328411ad65",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sha256:b53995952b15554a05037db570689177a35696f739d36117fd748b4a1cb9ed16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker build -t app . -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "77386841-bd87-454e-a6b2-19c57393335c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "REPOSITORY       TAG       IMAGE ID       CREATED                  SIZE\n",
-      "app              latest    b53995952b15   Less than a second ago   1.5GB\n",
-      "dpage/pgadmin4   latest    f70baa3facc1   2 weeks ago              534MB\n",
-      "python           latest    2acccf902fa3   3 weeks ago              1.02GB\n",
-      "postgres         latest    fbd1be2cbb1f   7 weeks ago              417MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List images\n",
     "!docker images"
@@ -614,18 +738,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6d4fe06f-a2bc-4106-a5d7-fd9fd1afbb27",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c71b041ff6d18588d498cbb0343810210ce1d94d9e64015333d517839921ffe5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the app in detached mode\n",
     "!docker run -d -p 8501:8501 -v $(pwd):/app app"
@@ -633,21 +749,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d2c940f1-451a-4932-8a62-c4eefe66937d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CONTAINER ID   IMAGE            COMMAND                  CREATED                  STATUS                  PORTS                                            NAMES\n",
-      "c71b041ff6d1   app              \"streamlit run app.p…\"   Less than a second ago   Up Less than a second   0.0.0.0:8501->8501/tcp, :::8501->8501/tcp        modest_wu\n",
-      "9a0dcd8c2bc4   dpage/pgadmin4   \"/entrypoint.sh\"         7 minutes ago            Up 7 minutes            443/tcp, 0.0.0.0:8000->80/tcp, :::8000->80/tcp   blissful_goodall\n",
-      "4d1deb153fbe   postgres         \"docker-entrypoint.s…\"   7 minutes ago            Up 7 minutes            0.0.0.0:5000->5432/tcp, :::5000->5432/tcp        postgres-sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker ps -a"
    ]
@@ -666,9 +771,12 @@
   {
    "cell_type": "markdown",
    "id": "c9fb8bbb-776d-4180-b2b6-34e04c810550",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "#### Connect to the database from Jupyter Lab"
+    "### Connect to the database from Jupyter Lab"
    ]
   },
   {
