Add and modify files

--- a/15-App-site-blog-v4/site-v4/site dev v4.ipynb
+++ b/15-App-site-blog-v4/site-v4/site dev v4.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b6afae1e-c0b4-4956-ac15-cd3f77df6a08",
    "metadata": {},
    "outputs": [],
@@ -708,11 +708,20 @@
    "cell_type": "markdown",
    "id": "fbcae193-2958-436f-8ee0-1b1c625e57be",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
     "### Build the image locally image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d89a40fc-cb1b-4eae-a7ae-b322f373d594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd app"
    ]
   },
   {
