--- a/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev with vertex ai.ipynb
+++ b/15-App-site-blog-v4/site-v4-with-vertex-ai/site dev with vertex ai.ipynb
@@ -24,6 +24,7 @@
    "cell_type": "markdown",
    "id": "ae9a2e06-0693-4170-b74b-98636adfb294",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -201,12 +202,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "935ec396-34b3-4980-b90d-c276ee09a9f2",
+   "metadata": {},
+   "source": [
+    "## Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1f4c638-8072-43d1-89a9-1617ef15ff4b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## Install and import libraries"
+    "### Install and import libraries"
    ]
   },
   {
@@ -238,6 +248,16 @@
    "source": [
     "import streamlit as st\n",
     "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31d97a06-1967-4357-9f55-b5241fcb45ec",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Application"
    ]
   },
   {
@@ -284,344 +304,6 @@
     "HOST='34.27.0.180'\n",
     "PORT='5000'\n",
     "PASSWORD='password'"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "a86cccd2-a588-4e2f-a09a-5de9f0f908a6",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "%%writefile app.py\n",
-    "# Import libraries\n",
-    "import streamlit as st\n",
-    "import psycopg2\n",
-    "import os\n",
-    "import time\n",
-    "from env import *\n",
-    "\n",
-    "#----------Page Configuration----------# \n",
-    "st.set_page_config(page_title=\"Matt Cloud Tech\",\n",
-    "                   page_icon=\":cloud:\",\n",
-    "                   menu_items={\n",
-    "                       'About':\"# Matt Cloud Tech Version 3\"})\n",
-    "\n",
-    "#----------About Me Section----------#\n",
-    "st.title(\":cloud: Matt Cloud Tech v3\")\n",
-    "st.subheader(\"\", divider=\"rainbow\")\n",
-    "\n",
-    "st.write(\"\"\"\n",
-    "        ### Good day :wave:.\n",
-    "        ### My name is :blue[Matt]. I am a Cloud Technology Enthusiast.\n",
-    "        ### Currently, I am learning and building Cloud Infrastructure, Data and CI/CD Pipelines, and Intelligent Systems. \n",
-    "        \"\"\") \n",
-    "st.divider()\n",
-    "st.write(\":link: :computer: [Personal Website](https://)\")\n",
-    "st.write(\":link: :book: [Project Repository](https://)\")\n",
-    "st.write(\":link: :notebook: [Blog](https://)\")\n",
-    "st.write(\":link: :hand: [Connect with me](https://)\")\n",
-    "#----------End of About Me Section----------#\n",
-    "\n",
-    "#----------Portfolio Section----------#\n",
-    "st.header(\"Project Collections\",divider=\"rainbow\")\n",
-    "\n",
-    "st.write(\"#### :link: [PROJECT TITLE #1](https://)\")\n",
-    "st.caption(\"Caption\")\n",
-    "with st.expander(f\"Learn more\"):\n",
-    "    st.write(\"Description\")\n",
-    "    \n",
-    "st.divider()\n",
-    "\n",
-    "st.write(\"#### :link: [PROJECT TITLE #2](https://)\")\n",
-    "st.caption(\"Caption\")\n",
-    "with st.expander(f\"Learn more\"):\n",
-    "    st.write(\"Description\")\n",
-    "st.divider()\n",
-    "\n",
-    "#----------End of Portfolio Section----------#\n",
-    "\n",
-    "\n",
-    "#----------Notepad Section----------#\n",
-    "# Notepad Section\n",
-    "# Header\n",
-    "st.header(\"Notepad :notebook:\",divider=\"rainbow\")\n",
-    "st.caption(\"\"\"\n",
-    "            Add your thoughts here! It will be stored in a database! \\n\n",
-    "            :warning: :red[Do not add sensitive data.]\n",
-    "            \"\"\")\n",
-    "# Variable\n",
-    "database_name = DBNAME\n",
-    "\n",
-    "con = psycopg2.connect(f\"\"\"\n",
-    "                       dbname={DBNAME}\n",
-    "                       user={USER}\n",
-    "                       host={HOST}\n",
-    "                       port={PORT}\n",
-    "                       password={PASSWORD}\n",
-    "                       \"\"\")\n",
-    "cur = con.cursor()\n",
-    "# Create a table if not exists\n",
-    "cur.execute(\"CREATE TABLE IF NOT EXISTS notes(id serial PRIMARY KEY, name varchar, header varchar, note varchar, time varchar)\")\n",
-    "con.commit()\n",
-    "\n",
-    "# Inputs\n",
-    "name = st.text_input(\"Your Name\")\n",
-    "header = st.text_input(\"Header\")\n",
-    "note = st.text_area(\"Note\")\n",
-    "if st.button(\"Add a note\"):\n",
-    "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
-    "    st.write(f\"\"\" \\n\n",
-    "            ##### :pencil: {header} \\n\n",
-    "            #### {note} \\n\n",
-    "            :man: {name} \\n\"\"\")\n",
-    "    st.caption(f\":watch: {time}\")\n",
-    "    st.success(\"Successfully Added.\")\n",
-    "    # st.balloons()\n",
-    "    ### Insert into adatabase\n",
-    "    SQL = \"INSERT INTO notes (name, header, note, time) VALUES(%s, %s, %s, %s);\"\n",
-    "    data = (name, header, note, time)\n",
-    "    cur.execute(SQL, data)\n",
-    "    con.commit()\n",
-    "    \n",
-    "# Previous Notes \n",
-    "st.divider()\n",
-    "st.write(\"### *Previous Notes*\")\n",
-    "# Write the data\n",
-    "cur.execute(\"\"\"\n",
-    "            SELECT * \n",
-    "            FROM notes\n",
-    "            ORDER BY time DESC\n",
-    "            \"\"\")\n",
-    "for id, name, header, note, time in cur.fetchall():\n",
-    "    st.write(f\"\"\" \\n\n",
-    "            ##### :pencil: {header} \\n\n",
-    "            #### {note} \\n\n",
-    "            :man: {name} \\n\"\"\")\n",
-    "    st.caption(f\":watch: {time}\")\n",
-    "\n",
-    "    with st.expander(f\"Edit or Delete (ID #: {id})\"):\n",
-    "        name = st.text_input(f\"Your Name (ID #: {id})\", name)\n",
-    "        header = st.text_input(f\"Header (ID #: {id})\", header)\n",
-    "        note = st.text_area(f\"Note (ID #: {id})\", note)\n",
-    "        if st.button(f\"UPDATE ID #: {id}\"):\n",
-    "            SQL = \" UPDATE notes SET id=%s, name=%s, header=%s, note=%s WHERE id = %s\"\n",
-    "            data = (id, name, header, note, id)\n",
-    "            cur.execute(SQL, data)\n",
-    "            con.commit()\n",
-    "            st.success(\"Successfully Edited.\")\n",
-    "        if st.button(f\"DELETE ID #: {id}\"):\n",
-    "            cur.execute(f\"DELETE FROM notes WHERE id = {id}\")\n",
-    "            con.commit()\n",
-    "            st.success(\"Successfully Deleted.\")\n",
-    "    st.subheader(\"\",divider=\"gray\")\n",
-    "    \n",
-    "# Close Connection\n",
-    "cur.close()\n",
-    "con.close()\n",
-    "#----------End of Notepad Section----------#\n",
-    "\n",
-    "#----------Counter----------#\n",
-    "# Title\n",
-    "st.header(\"Counter\")\n",
-    "st.caption(\"\"\"\n",
-    "            Count every request in this app.\n",
-    "            \"\"\")\n",
-    "st.subheader(\"\",divider=\"rainbow\")\n",
-    "\n",
-    "# Variable\n",
-    "database_name = DBNAME\n",
-    "\n",
-    "con = psycopg2.connect(f\"\"\"\n",
-    "                       dbname={DBNAME}\n",
-    "                       user={USER}\n",
-    "                       host={HOST}\n",
-    "                       port={PORT}\n",
-    "                       password={PASSWORD}\n",
-    "                       \"\"\")\n",
-    "cur = con.cursor()\n",
-    "# Create a table if not exists\n",
-    "cur.execute(\"CREATE TABLE IF NOT EXISTS counter(id serial PRIMARY KEY, view int, time varchar)\")\n",
-    "con.commit()\n",
-    "\n",
-    "# Counter\n",
-    "import time\n",
-    "time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
-    "view = 1\n",
-    "### Insert into a database\n",
-    "SQL = \"INSERT INTO counter (view, time) VALUES(%s, %s);\"\n",
-    "data = (view, time)\n",
-    "cur.execute(SQL, data)\n",
-    "con.commit()\n",
-    "\n",
-    "# Total views\n",
-    "cur.execute(\"\"\"\n",
-    "                SELECT SUM(view) \n",
-    "                FROM counter\n",
-    "                \"\"\")\n",
-    "st.write(f\"### Total views: **{cur.fetchone()[0]}**\")\n",
-    "\n",
-    "# Current view\n",
-    "st.write(f\"Current: {time}\")\n",
-    "# Previous hits\n",
-    "st.divider()\n",
-    "with st.expander(\"See Previous Views\"):\n",
-    "    st.write(\"**Previous Views**\")\n",
-    "    # Write the data\n",
-    "    cur.execute(\"\"\"\n",
-    "                SELECT * \n",
-    "                FROM counter\n",
-    "                ORDER BY time DESC\n",
-    "                \"\"\")\n",
-    "    for _, _, time in cur.fetchall():\n",
-    "        st.text(f\"{time}\")\n",
-    "    \n",
-    "# Close Connection\n",
-    "cur.close()\n",
-    "con.close()\n",
-    "\n",
-    "#----------Agent Section----------#\n",
-    "import time\n",
-    "st.header(\":eyeglasses: Agent :construction:\",divider=\"rainbow\")\n",
-    "st.caption(\"### Chat with my agent (still under construction)\")\n",
-    "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
-    "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
-    "\n",
-    "\n",
-    "               \n",
-    "# Variable\n",
-    "database_name = DBNAME\n",
-    "# Connect to a database\n",
-    "con = psycopg2.connect(f\"\"\"\n",
-    "                       dbname={DBNAME}\n",
-    "                       user={USER}\n",
-    "                       host={HOST}\n",
-    "                       port={PORT}\n",
-    "                       password={PASSWORD}\n",
-    "                       \"\"\")\n",
-    "cur = con.cursor()\n",
-    "# Create a table if not exists\n",
-    "cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
-    "con.commit()\n",
-    "\n",
-    "# Prompt\n",
-    "input_name = st.text_input(\"Your Name:\")\n",
-    "agent = st.toggle(\"**Let's go**\")\n",
-    "if agent:\n",
-    "    st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
-    "    prompt = st.chat_input(\"Talk to my agent\")\n",
-    "    if prompt:\n",
-    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
-    "        st.write(f\":blue[{input_name}]: {prompt}\")\n",
-    "        st.caption(f\"{time}\")\n",
-    "        output = \"I'm still learning :book:. Check back later.\"\n",
-    "        st.success(f\":eyeglasses: Agent: {output}\")\n",
-    "        st.divider()\n",
-    "\n",
-    "        ### Insert into a database\n",
-    "        SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
-    "        data = (input_name, prompt, output, time)\n",
-    "        cur.execute(SQL, data)\n",
-    "        con.commit()\n",
-    "\n",
-    "\n",
-    "        with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
-    "            cur.execute(f\"\"\"\n",
-    "                        SELECT * \n",
-    "                        FROM chats\n",
-    "                        WHERE name='{input_name}'\n",
-    "                        ORDER BY time DESC\n",
-    "                        \"\"\")\n",
-    "            for id, name, prompt, output, time in cur.fetchall():\n",
-    "                    st.write(f\":blue[{name}]: {prompt}\")\n",
-    "                    st.caption(f\"{time}\")\n",
-    "# Close Connection\n",
-    "cur.close()\n",
-    "con.close()\n",
-    "#----------End of Agent Section----------#"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "db4b5730-f6e9-4aff-ae4a-9cce0104ed27",
-   "metadata": {},
-   "source": [
-    "%%writefile app.py\n",
-    "# Import libraries\n",
-    "import streamlit as st\n",
-    "import psycopg2\n",
-    "import os\n",
-    "import time\n",
-    "from env import *\n",
-    "\n",
-    "#----------Agent Section Only using chat_messgae----------#\n",
-    "import time\n",
-    "st.header(\":computer: Agent :construction:\",divider=\"rainbow\")\n",
-    "st.caption(\"### Chat with my agent (still under construction)\")\n",
-    "st.write(f\":violet[Your chat will be stored in a database, so use the same name to see your past conversations]\")\n",
-    "st.caption(\":warning: :red[Do not add sensitive data.]\")\n",
-    "\n",
-    "\n",
-    "               \n",
-    "# Variable\n",
-    "database_name = DBNAME\n",
-    "# Connect to a database\n",
-    "con = psycopg2.connect(f\"\"\"\n",
-    "                       dbname={DBNAME}\n",
-    "                       user={USER}\n",
-    "                       host={HOST}\n",
-    "                       port={PORT}\n",
-    "                       password={PASSWORD}\n",
-    "                       \"\"\")\n",
-    "cur = con.cursor()\n",
-    "# Create a table if not exists\n",
-    "cur.execute(\"CREATE TABLE IF NOT EXISTS chats(id serial PRIMARY KEY, name varchar, prompt varchar, output varchar, time varchar)\")\n",
-    "con.commit()\n",
-    "\n",
-    "# Prompt\n",
-    "input_name = st.text_input(\"Your Name:\")\n",
-    "agent = st.toggle(\"**Let's go**\")\n",
-    "if agent:\n",
-    "    st.write(f\"Your name for this chat is :blue[{input_name}]\")\n",
-    "    prompt = st.chat_input(\"Talk to my agent\")\n",
-    "    if prompt:\n",
-    "        time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
-    "        message = st.chat_message(\"user\")\n",
-    "        message.write(f\":blue[{input_name}]: {prompt}\")\n",
-    "        message.caption(f\"{time}\")\n",
-    "        message = st.chat_message(\"assistant\")\n",
-    "        output = \"I'm still learning :book:. Check back later.\"\n",
-    "        message.success(f\"Agent: {output}\")\n",
-    "        message.caption(f\"{time}\")\n",
-    "        st.divider()\n",
-    "\n",
-    "        ### Insert into a database\n",
-    "        SQL = \"INSERT INTO chats (name, prompt, output, time) VALUES(%s, %s, %s, %s);\"\n",
-    "        data = (input_name, prompt, output, time)\n",
-    "        cur.execute(SQL, data)\n",
-    "        con.commit()\n",
-    "\n",
-    "\n",
-    "        with st.expander(f\"See Previous Conversation for {input_name}\"):\n",
-    "            cur.execute(f\"\"\"\n",
-    "                        SELECT * \n",
-    "                        FROM chats\n",
-    "                        WHERE name='{input_name}'\n",
-    "                        ORDER BY time ASC\n",
-    "                        \"\"\")\n",
-    "            for id, name, prompt, output, time in cur.fetchall():\n",
-    "                message = st.chat_message(\"user\")\n",
-    "                message.write(f\":blue[{name}]: {prompt}\")\n",
-    "                message.caption(f\"{time}\")\n",
-    "                message = st.chat_message(\"assistant\")\n",
-    "                output = \"I'm still learning :book:. Check back later.\"\n",
-    "                message.success(f\"Agent: {output}\")\n",
-    "                message.caption(f\"{time}\")\n",
-    "# Close Connection\n",
-    "cur.close()\n",
-    "con.close()\n",
-    "#----------End of Agent Section----------#\n",
-    "\n"
    ]
   },
   {
@@ -748,6 +430,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4bdff386-dcb9-414b-b406-685df67a0361",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### Build the image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4b7e4b65-2fb9-4606-a303-f74de6746b92",
@@ -833,9 +526,12 @@
   {
    "cell_type": "markdown",
    "id": "c9fb8bbb-776d-4180-b2b6-34e04c810550",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "#### Connect to the database from Jupyter Lab"
+    "### Connect to the database from Jupyter Lab"
    ]
   },
   {
